--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -5,7 +5,7 @@
     "browsers": "PhantomJS",
     "app-files": "app/scripts/**/*.js",
     "files-comments": "bower:js,endbower",
-    "bower-components-path": "bower_components",
+    "bower-components-path": "app/bower_components",
     "test-files": "test/mock/**/*.js,test/spec/**/*.js"
   }
 }
